--- a/vs1m.pro/public/404.html
+++ b/vs1m.pro/public/404.html
@@ -30,6 +30,7 @@
     </article>
 
     
+    <a class="back" href="#"> back to up </a>
     
     <footer>
       <p>&copy; 2025 vs1m.pro. All Rights Reserved.</p>
